--- a/DocFx/ProgrammingGuide/toc.yml
+++ b/DocFx/ProgrammingGuide/toc.yml
@@ -4,3 +4,5 @@
   href: puzzle1-solution.md
 - name: Puzzle 2 Solution
   href: puzzle2-solution.md
+- name: Syntax Reference Introduction
+  href: syntax-reference_introduction.md
